# lib-samsara

./: .buildinfo  .bumpversion.cfg  .cookiecutterrc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  readme.html  search.html  searchindex.js  setup.py  tox.ini  tutorial.html  usage.html
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  tutorial.doctree  usage.doctree
.doctrees/_static/notebooks/: 01_SAMSARA_app.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/samsara/: index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_update.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  github-actions.yml  test.yml
_modules/: index.html
_modules/samsara/: cli.html
_modules/samsara/filter/: _filter.html
_sources/: index.rst.txt  usage.rst.txt
_sources/autoapi/: index.rst.txt
_static/notebooks/: 01_SAMSARA_app.html
autoapi/: index.html
autoapi/samsara/: index.html
ci/: bootstrap.py
docs/: conf.py  installation.rst  requirements.txt  tutorial.rst  usage.rst
docs/reference/: index.rst  samsara.rst
extras/: PELT_demostracion_DCC.ipynb  ccdc_demostracion_GEE.ipynb  npphen_demostration_GEE.ipynb
src/samsara/: __init__.py  __main__.py  cli.py  pelt.py
tests/: test_samsara.py
tests/unit/: conftest.py  test_filter.py  test_kernel.py  test_pelt.py  test_shaped_kernel.py
(+86 files in other folders)
